# learn

./: .gitignore  LICENSE  README.md
.github/workflows/: ci_for_zero2prod.yml
itok.elixir/rumbl/: .gitignore  README.md  mix.exs
itok.elixir/users_api/: README.md  mix.exs
itok.rust/first_class/: Cargo.toml
itok.rust/half_hour/: Cargo.toml
learn-algo/Learn.Algo/: Learn.Algo.sln
learn-angular/my-app/: package-lock.json
learn-category-theory/lct/: lct.sln
learn-dapr/learn-dapr/: learn-dapr.sln
learn-elixir/chat/: README.md  mix.exs
learn-elixir/gencounter/: .gitignore  README.md  mix.exs
learn-elixir/hello/: mix.exs
learn-elixir/scripts/: .gitignore  circle.ex  geometry.ex  mix.exs
learn-fsharp/elmish/: package-lock.json  package.json
learn-fsharp/elmish-getting-started/: .gitignore  package-lock.json  package.json
learn-fsharp/elmish-next/: package-lock.json
learn-fsharp/fsharp-web/: fsharp-web.sln
learn-fsharp/learn-fsharp/: learn-fsharp.sln
learn-fsharp/scripts/: NBomber_simple.fsx  webserver.fsx
learn-go/src/: ErrorSample.go  interfaces.go  tour.go
learn-pgsql/ChangeDataDemo/: ChangeDataDemo.sln
learn-rust/by_book_in_action/: Cargo.toml
learn-rust/by_book_rust-lang/: Cargo.toml
learn-rust/by_ms/: Cargo.toml
learn-rust/by_ms_learn/: Cargo.toml
learn-rust/by_rust-lang/: Cargo.toml
learn-rust/by_the_book/: Cargo.toml
learn-rust/by_udemy_624252/: Cargo.toml
learn-rust/httpie/: Cargo.toml
learn-rust/httpie/src/: main.rs
learn-rust/rusty-journal/: Cargo.toml
learn-rust/rusty-journal/src/: cli.rs  main.rs  tasks.rs
(+213 files in other folders)
