[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
clap = { version = "3", features = ["derive"] } # 命令行参数解析
colored = "2" # 命令行终端提示
jsonxf = "1.1" # JSON格式化
mime = "0.3" # MIME类型
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] } # HTTP 客户端
tokio = { version = "1", features = ["full"] }
syntect = "4" # 语法高亮
